--- a/황지순/web/black_and_white.html
+++ b/황지순/web/black_and_white.html
@@ -3,14 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>흑백요리사</title>
+    <style>
+        a {
+            color:black;
+            text-decoration: none;
+        }
+        .saw {
+            color: gray;
+        }
+        h1 {
+            font-size: 50px;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
 <h1><a href="black_and_white.html">흑백요리사</a></h1>
 <h2>흑백요리사 프로필</h2>
 <ul>
-    <li><a href="judge.html" target="_blank" title="심사위원"><h2>심사위원</h2></a></li>
-    <li><a href="h_chef.html"><h2>백요리사</h2></a></li>
-    <li><a href="b_chef.html"><h2>흑요리사</h2></a></li>
+    <li><a href="judge.html" title="심사위원"><h2>심사위원</h2></a></li>
+    <li><a href="h_chef.html" title="백요리사"><h2>백요리사</h2></a></li>
+    <li><a href="b_chef.html" title="흑요리사"><h2>흑요리사</h2></a></li>
 </ul>
 
 <h2>흑백요리사: 요리 계급 전쟁</h2>
