--- a/황지순/web/black_and_white.html
+++ b/황지순/web/black_and_white.html
@@ -14,6 +14,14 @@
         h1 {
             font-size: 50px;
             text-align: center;
+            border-bottom: 1px solid gray;
+            margin: 0;
+            padding: 20px;
+        }
+        ul {
+
+            border-bottom: 1px solid gray;
+
         }
     </style>
 </head>
